# uv_monitor

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
app/: app.py
docker/: Dockerfile  entrypoint.sh
notebooks/: NB1_Erythemal_Exploratory.ipynb  NB1_Erythemal_Exploratory.py  NB2_LangChain_Demo.ipynb  NB2_LangChain_Demo.py
src/uv_monitor/: anomaly.py  dataio.py  logging.py  utils.py
tests/: test_anomaly.py  test_dataio.py  test_uv_monitor.py
